app/less/archetype.less
{{VERSION}}

.archetypeEditor {
    width: 98%;

    .usky-grid {
        .cell-tools-menu {
            height: 385px;
        }
        &.withGroups {
            .cell-tools-menu {
                height: 415px;
            }
        }
    }

    .open {
        position: relative;
    }

    .dropdown-menu {
        top: auto;
        > li > a {
            border-radius: 6px;
        }
    }

    .controls-no-label {
        padding: 10px;
    }

    a+ul.dropdown-menu {
        margin-left: 0;
    }

    .fieldsetIcon {
        float: left;
        padding: 0 4px 0 0;
        color: #333;
        vertical-align: text-bottom;
    }

    .caret {
        margin: 8px 1px 0 2px;
        &.caret-right {
            border-bottom: 4px solid transparent;
            border-top: 4px solid transparent;
            border-left: 4px solid #ddd;
            content: "";
            margin-top: 6px;
        }
    }

    fieldset {
        border-bottom: 1px dashed #dddddd;
        padding: 0;
        margin-bottom: 5px;
        clear: both;
        display: inline-block;
        width: 100%;

        .archetypeProperty {
            clear: both;
            overflow: visible;
            margin-top: 3px;

            label {
                padding-left: 5px !important;

                span {
                    color: #343434;
                }
                &.dimmed span {
                    color: #d9d9d9;
                }

            }
            
            .publishOptions {
                .publishDate {
                    display: inline-block;
                    vertical-align: top;
                    margin-right: 20px;
                    
                    label {
                        padding: 0 !important;
                        margin: 0 !important;
                    }
                }
            }
        }

        .archetypeFieldsetLabel {
            position: relative;
            width: 100%;
            min-height: 42px;

            .label-sub {
                padding: 8px 0 8px 0;
                display: inline-block;
                min-height: 20px; /* this makes the header clickable when there's no icon and no text */
                &.module-label {
                    width: 100%;
                }
                &:hover {
                    cursor: pointer;
    
                    label  {
                        span {
                            text-decoration: underline;
                        }
                        &:hover {
                            cursor: pointer;
                        }
                    }
                    
                    .caret-right {
                        border-left-color: #333;
                    }
                }
            }

            .dropdown-menu {
                position: relative;
                padding: 0;
                border-radius: 0;
                box-shadow: none;
                margin-top: -10px;
            }

            span {
                font-weight: bold;

                &.menu-label { font-weight: normal; }
            }

            label:hover {
                cursor: default;
            }

            .caret {
                position: absolute;
            }

            label {
                margin-bottom: 0;
                margin-left: 18px;
                white-space: nowrap;
                padding: 0;
                width: ~"calc(100% - 144px)";
                position: absolute;
                span {
                    display: block;
                    overflow: hidden;
                    text-overflow: ellipsis;
                }
                &.dimmed {
                    i, span {
                        color: #d9d9d9 !important;
                    }
                }
            }

            .archetypeEditorControls {
                float: none;
                position: absolute;
                right: 15px;
                top: 0;

                .icon {
                    color: #ddd;
                    padding: 2px;
                    font-size: 16px;
                    &:hover {
                        color: #333;
                    }
                    &.icon-delete:hover {
                        color: #b94a48;
                    }
                    &.icon-disabled {
                        cursor: default;
                        &:hover {
                            color: #ddd;
                        }
                    }
                    &.icon-active {
                        color: #333;
                        &:hover {
                            color: #333;
                        }
                    }
                }
            }
            
            &:hover {
            }
        }

        .archetypePropertyError {
            margin-bottom: 5px;
            padding-top: 3px;
            padding-bottom: 3px;

            label {

                span {
                    color: #b94a48;
                    font-weight: bold;
                }
            }
        }

        .archetypeCollapser {
            clear: both;
            height: 100%;
            padding: 12px 0 0 20px;
            background-color: #fff;
            border-radius: 0 0 0 5px;

            form {
                margin-left:20px;

                .control-label {
                    padding-top: 0 !important;
                }
            }

            .archetypeFieldsetHelpText {
                clear:both;
                margin-bottom: 3px;
                font-size: 12px;
            }
        }
    }

    .archetypeDeveloperModel
    {
        font-family: monospace;
        width: 98%;
        min-height: 100px;
        margin-bottom: 10px;
        border: 1px solid red;
    }

    .archetypeFieldsetError {
        border: 1px solid #b94a48;
    }

    .archetypeAddButton {
        color: #ddd;
        .icon {
            vertical-align: text-top;
        }
        &:hover {
            color: #333;
            text-decoration: none;
            cursor: pointer;

            .archetypeAddButtonText {
                text-decoration: underline;
            }

            .icon {
                color: #333;
            }
        }

    }

    .multiPropertyTextbox {
        margin-bottom: 3px;
    }

    ul {
        list-style: none;
        margin-left: 0;
    }

    .show-validation.ng-invalid .control-group.error .control-label {
        span {
            color: #343434;
        }
    }

    .fieldsetPicker {
        .icon {
            color: #333;
        }
        ul.elements li {
            overflow: visible;
            vertical-align: top;  
            height: 90px;        
        }
        ul.groups {
            display: block;
            margin: 0;
            padding: 4px;
            li {
                width: auto;
                margin: 0;
                padding: 0 20px;
                font-weight: bold;
                a {
                    color: #d9d9d9;
                    cursor: pointer;
                }
                &.active a, a:hover {
                    color: #999;
                    text-decoration: none;
                }
            }
        }
    }

    .settingsWrapper {
        &:hover {
            caret {
                background-color: #333;
            }
        }
        .settingsHeader {
            &:hover {
                cursor: pointer;
                label {
                    text-decoration: underline;
                }

                .caret-right {
                    border-left-color: #333;
                }
            }
        }
        .settings {
            padding: 14px;
            background-color: #f8f8f8;
        }
    }
}

.archetypeEditor, .archetypeConfig {
    .archetypeEditorControls {
        float: right;
    }
    .archetypeEditorControls, .archetypeFieldsetGroups {
        i {
            cursor: pointer;
            &.handle {
                cursor: move;
            }
            &.dimmed {
                color: #d9d9d9;
            }
        }
    }
}

.archetypeConfig {
    margin-bottom: 20px;

    .archetype-headline {

        img {
            margin-right: 5px;
        }

        small {
            margin-left: 5px;
        }
        
        a {
            float: right;
            
            img {
                width: 35px;
            }
        }
    }

    .manual-link {
        color: blue;
    }

    ul {
        list-style: none;
    }

    li {
        background-color: #fff;
    }

    label {
        width: 120px;
    }

    .archetypeEditorControls {
        float: right;
    }

    .archetypeFieldsets {
        margin-left: 0;
    }

    .archetypeFieldsetWrapper {
        border: 1px solid #ccc;
        padding: 10px;
        margin-bottom: 10px;
    }

    .archetypeFieldsetTitle {
        cursor: pointer;
        overflow: hidden;
    }

    .archetypeFieldsetOption {
        margin-bottom: 15px;
        margin-right: 15px;
        input[type=text]{
            max-width: 100%;
            width: 100%;
        }
    }

    .archetypeDeveloperModel {
        font-family: monospace;
        width: 88%;
        margin: 5px 10px 10px;
        height: 130px;
    }

    .archetypeOptions {
        .btn {
            margin-bottom: 5px;
        }

        label{
            width: 400px;
        }
    }

    .archetypePropertiesWrapper {
        border: 1px solid #ddd;
        padding: 8px;
        margin: -40px 10px 10px 140px;

        ul {
            padding: 0;
            margin: 0;
        }

        li {
            padding: 10px;
            margin-bottom: 10px;
            background-color: #eee;

            input[type=text] {
                max-width: 100%;
                width: 100%;
            }

            select {
                max-width: 100%;
                width: 100%;
            }
        }

        li:last-child {
            margin-bottom: 0;
        }
    }

    .archetypeAdvancedOptions {
        label {
            width: 100%;
        }
        
        input[type=text] {
            width: 100%;
        }

        input[type=checkbox] {
            margin-top: 0;
            margin-right: 2px;
        }

        small {
            color: #b3b3b3;
        }

        .archetypeFieldsetGroups {
            padding: 0 10px;
            margin-bottom: 20px;

            ul {
                padding: 0;
                margin: 0;
                margin-top: 15px;

                li {

                    label {
                        width: 120px;
                    }

                    input {
                        vertical-align: middle;
                        width: 240px;
                    }
                }
            }
        }        
    }

    .archetypeMaxFieldsets{
        border: 1px solid #ddd;
        width: 40px;
        text-align: right;
    }

    .archetypePropertyTitle {
        cursor: pointer;
        overflow: hidden;
    }

    .archetypePropertyCollapser {
        margin-top: 10px;
        
        div {
            margin-bottom: 10px;
            margin-right: 15px;
        }
    }

    .archetypeFieldsetCollapser {
        margin-top: 15px;
    }

    .fieldsetIcon {
        margin-right: 10px;
    }
}

.ui-sortable-placeholder {
    visibility: visible !important;
    background-color:   #d0e7f1 !important;
}

.archetype-dialog {
    margin: 10px;
}

